# kerebro_api

./: README.md
crup-api/: Dockerfile  pyproject.toml
crup-api/app/: main.py
crup-api/app/routers/: words.py
